@@ -24,8 +24,10 @@ package joshuatee.wx.objects
 enum class ModelType {
     WPCGEFS,
     NSSL,
-
-
+    ESRL,
+    NCEP,
+    SPCHREF,
+    SPCHRRR
 }
 
 
