@@ -42,9 +42,11 @@ class ObjectModel(val context: Context, var prefModel: String) {
     private var modelType: ModelType = ModelType.NSSL
     var startStep: Int = 0
     var endStep: Int = 0
-    var stepAmount: Int = 0
+    var stepAmount: Int = 1
     var numberRuns: Int = 0
+    var timeTruncate: Int = 2
     var format: String = "%03d"
+    var truncateTime: Boolean = true
     var prefSector: String = "MODEL_" + prefModel + numPanesStr + "_SECTOR_LAST_USED"
     var prefParam: String = "MODEL_" + prefModel + numPanesStr + "_PARAM_LAST_USED"
     var prefParamLabel: String = "MODEL_" + prefModel + numPanesStr + "_PARAM_LAST_USED_LABEL"
@@ -52,43 +54,59 @@ class ObjectModel(val context: Context, var prefModel: String) {
     var modelProvider: String = "MODEL_$prefModel$numPanesStr"
     var rtd: RunTimeData = RunTimeData()
     lateinit var displayData: DisplayData
-    var sectors: List<String> = listOf()
-    var labels: List<String> = listOf()
-    var params: List<String> = listOf()
-    var models: List<String> = listOf()
+    var sectors: List<String> = listOf("")
+    var labels: List<String> = listOf("")
+    var params: List<String> = listOf("")
+    var models: List<String> = listOf("")
+    var defaultModel: String = ""
 
     init {
 
         when (prefModel) {
-            "WPCGEFS" -> modelType = ModelType.WPCGEFS
-            "NSSL" -> modelType = ModelType.NSSL
+            "WPCGEFS" -> {
+                modelType = ModelType.WPCGEFS
+                defaultModel = "WPCGEFS"
+            }
+            "NSSL" -> {
+                modelType = ModelType.NSSL
+            }
+            "ESRL" -> {
+                modelType = ModelType.ESRL
+                models = UtilityModelESRLInterface.models
+            }
+            "NCEP" -> {
+                modelType = ModelType.NCEP
+            }
         }
 
         prefModel += numPanesStr
-        // FIXME needs to be default model string
-        model = Utility.readPref(context, prefModel, "WPCGEFS")
+        model = Utility.readPref(context, prefModel, defaultModel)
         prefSector = "MODEL_" + prefModel + numPanesStr + "_SECTOR_LAST_USED"
         prefParam = "MODEL_" + prefModel + numPanesStr + "_PARAM_LAST_USED"
         prefParamLabel = "MODEL_" + prefModel + numPanesStr + "_PARAM_LAST_USED_LABEL"
         prefRunPosn = "MODEL_" + prefModel + numPanesStr + "_RUN_POSN"
         modelProvider = "MODEL_$prefModel"
 
-        sectors = UtilityModelWPCGEFSInterface.sectors
-        labels = UtilityModelWPCGEFSInterface.LABELS
-        params = UtilityModelWPCGEFSInterface.PARAMS
-        models = UtilityModelWPCGEFSInterface.models
+        //sectors = UtilityModelWPCGEFSInterface.sectors
+        //labels = UtilityModelWPCGEFSInterface.LABELS
+        //params = UtilityModelWPCGEFSInterface.PARAMS
+        //models = UtilityModelWPCGEFSInterface.models
     }
 
-    fun getImage(): Bitmap {
+    fun getImage(index: Int): Bitmap {
         return when (modelType) {
-            ModelType.WPCGEFS -> UtilityModelWPCGEFSInputOutput.getImage(sector, displayData.param[curImg], run, time)
+            ModelType.WPCGEFS -> UtilityModelWPCGEFSInputOutput.getImage(sector, displayData.param[index], run, time)
+            ModelType.ESRL -> UtilityModelESRLInputOutput.getImage(model, sectorOrig, sectorInt, displayData.param[index], run, time)
+            ModelType.NSSL -> UtilityModelNSSLWRFInputOutput.getImage(context, model, sector, displayData.param[index], run, time)
             else -> UtilityImg.getBlankBitmap()
         }
     }
 
-    fun getAnimate(spinnerTimeValue: Int, timeList: List<String>): AnimationDrawable {
+    fun getAnimate(index: Int, spinnerTimeValue: Int, timeList: List<String>): AnimationDrawable {
         return when (modelType) {
-            ModelType.WPCGEFS -> UtilityModelWPCGEFSInputOutput.getAnimation(context, sector, displayData.param[curImg], run, spinnerTimeValue, timeList)
+            ModelType.WPCGEFS -> UtilityModelWPCGEFSInputOutput.getAnimation(context, sector, displayData.param[index], run, spinnerTimeValue, timeList)
+            ModelType.ESRL -> UtilityModelESRLInputOutput.getAnimation(context, model, sectorOrig, sectorInt, displayData.param[index], run, spinnerTimeValue, timeList)
+            ModelType.NSSL -> UtilityModelNSSLWRFInputOutput.getAnimation(context, model, sector, displayData.param[index], run, spinnerTimeValue, timeList)
             else -> AnimationDrawable()
         }
     }
@@ -96,6 +114,8 @@ class ObjectModel(val context: Context, var prefModel: String) {
     fun getRunTime(): RunTimeData {
         return when (modelType) {
             ModelType.WPCGEFS -> UtilityModelWPCGEFSInputOutput.runTime
+            ModelType.ESRL -> UtilityModelESRLInputOutput.getRunTime(model)
+            ModelType.NSSL -> UtilityModelNSSLWRFInputOutput.runTime
             else -> RunTimeData()
         }
     }
@@ -114,11 +134,110 @@ class ObjectModel(val context: Context, var prefModel: String) {
                         stepAmount = 6
                         numberRuns = 0
                         format = "%03d"
+                        timeTruncate = 3
                     }
                 }
             }
             ModelType.NSSL -> {
-
+                truncateTime = false
+                when (selectedItemPosition) {
+                    0 -> {
+                        model = "WRF"
+                        params = UtilityModelNSSLWRFInterface.paramsNsslWrf
+                        labels = UtilityModelNSSLWRFInterface.labelsNsslWrf
+                        sectors = UtilityModelNSSLWRFInterface.sectorsLong
+                        startStep = 1
+                        endStep = 36
+                        timeTruncate = 3
+                    }
+                    1 -> {
+                        model = "FV3"
+                        params = UtilityModelNSSLWRFInterface.paramsNsslFv3
+                        labels = UtilityModelNSSLWRFInterface.labelsNsslFv3
+                        sectors = UtilityModelNSSLWRFInterface.sectorsLong
+                        startStep = 1
+                        endStep = 60
+                        timeTruncate = 3
+                    }
+                    2 -> {
+                        model = "HRRRV3"
+                        params = UtilityModelNSSLWRFInterface.paramsNsslHrrrv3
+                        labels = UtilityModelNSSLWRFInterface.labelsNsslHrrrv3
+                        sectors = UtilityModelNSSLWRFInterface.sectorsLong
+                        startStep = 1
+                        endStep = 36
+                        timeTruncate = 3
+                    }
+                    3 -> {
+                        model = "WRF_3KM"
+                        model = "HRRRV3"
+                        params = UtilityModelNSSLWRFInterface.paramsNsslWrf
+                        labels = UtilityModelNSSLWRFInterface.labelsNsslWrf
+                        sectors = UtilityModelNSSLWRFInterface.sectorsLong
+                        startStep = 1
+                        endStep = 36
+                        timeTruncate = 3
+                    }
+                }
+            }
+            ModelType.ESRL -> {
+                when (selectedItemPosition) {
+                    3 -> {
+                        model = "RAP"
+                        params = UtilityModelESRLInterface.paramsRap
+                        labels = UtilityModelESRLInterface.labelsRap
+                        sectors = UtilityModelESRLInterface.sectorsRap
+                        startStep = 0
+                        endStep = 39
+                        stepAmount = 1
+                        format = "%02d"
+                        timeTruncate = 2
+                    }
+                    4 -> {
+                        model = "RAP_NCEP"
+                        params = UtilityModelESRLInterface.paramsRap
+                        labels = UtilityModelESRLInterface.labelsRap
+                        sectors = UtilityModelESRLInterface.sectorsRap
+                        startStep = 0
+                        endStep = 39
+                        stepAmount = 1
+                        format = "%02d"
+                        timeTruncate = 2
+                    }
+                    0 -> {
+                        model = "HRRR"
+                        params = UtilityModelESRLInterface.paramsHrrr
+                        labels = UtilityModelESRLInterface.labelsHrrr
+                        sectors = UtilityModelESRLInterface.sectorsHrrr
+                        startStep = 0
+                        endStep = 36
+                        stepAmount = 1
+                        format = "%02d"
+                        timeTruncate = 2
+                    }
+                    1 -> {
+                        model = "HRRR_AK"
+                        params = UtilityModelESRLInterface.paramsHrrr
+                        labels = UtilityModelESRLInterface.labelsHrrr
+                        sectors = UtilityModelESRLInterface.sectorsHrrrAk
+                        startStep = 0
+                        endStep = 36
+                        stepAmount = 1
+                        format = "%02d"
+                        timeTruncate = 2
+                    }
+                    2 -> {
+                        model = "HRRR_NCEP"
+                        params = UtilityModelESRLInterface.paramsHrrr
+                        labels = UtilityModelESRLInterface.labelsHrrr
+                        sectors = UtilityModelESRLInterface.sectorsHrrr
+                        startStep = 0
+                        endStep = 36
+                        stepAmount = 1
+                        format = "%02d"
+                        timeTruncate = 2
+                    }
+                }
             }
         }
 
